--- a/SimonDice/styles.css
+++ b/SimonDice/styles.css
@@ -83,6 +83,10 @@ body {
     display: none;
 }
 
+* {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
 .btn-start:hover {
     color: #ecf0f1;
     background: #2c3e50;
